	* Removed all "fancy selects" styling on admin UI select menus; we're now relying on default WordPress styling.
* Third-Party Plugin Compatibility
	* bbPress: "Lead Topic" enabled by default, with no more theme option to disable. Use filer `themeblvd_bbp_show_lead_topic` to disable.
	* bbPress: Added option to disable theme's bbPress styling at *Appearance > Theme Options > Plugins > bbPress*.
	* Gravity Forms: Added option to disable theme's Gravity Forms styling at *Appearance > Theme Options > Plugins > bbPress*.
	* WooCommerce: Removed any legacy code for WooCommerce versions prior to 3.0.
	* WPML: Fixed WPML options showing on Theme Options, when WPML isn't installed.
* New: Added support for applying background shade to individual columns in the layout builder.
* Improvement: Swap TGMPA for [My Plugin Manager](http://mypluginmanager.com).
* Improvement: Better handling of retrieving FontAwesome icons for admin icon browser for more server setups, along with minor UI fixes.
* Fixed: WooCommerce deprecated use of `WC_Cart::get_cart_url`.
* Removed: No more support for thumbnail borders; the filter `themeblvd_featured_thumb_frame` has been removed. Use CSS customization instead.
* Removed: No more support for [Theme Blvd Sliders](https://wordpress.org/plugins/theme-blvd-sliders/) plugin.
* **Important:** If you have [template part files](http://dev.themeblvd.com/tutorial/template-parts-framework-2-5/) in your child theme, they MUST be moved into a directory named `template-parts`.

--------------------------------------------------------------

2.1.14 - 11/08/2017
-------------------

* **Updated Theme Blvd framework to 2.6.13**
* Improvement: Better consistency loading background video from YouTube and Vimeo.
* Improvement: Include all frontend functionality generally for better compatibility for third-party plugins that may be incorporating frontend components within the admin panel.